# eris_rag

./: .gitignore  README.md  chat.py  config.yaml.example  install.py  instruction.txt  pyproject.toml  requirements.txt  run_pipeline.py  start.bat  start.sh  train.py
astrbot_plugin/: _conf_schema.json  main.py
data/: knowledge_base.txt  tags_taxonomy.yaml  user_prompts.yaml
data/characters_backup/eris/l1_modules/: combat.yaml  core.yaml  growth.yaml  pride.yaml  relationship.yaml  vulnerability.yaml
data/characters_backup/eris/l2_rules/: rules.yaml  tag_index.json
openspec/changes/eris-rag-server/: design.md  proposal.md  tasks.md
openspec/changes/eris-rag-server/specs/astrbot-plugin/: spec.md
openspec/changes/eris-rag-server/specs/behavior-rules/: spec.md
openspec/changes/eris-rag-server/specs/core-identity/: spec.md
src/: config.py  models.py  server.py
src/embedding/: embed_model.py  reranker.py
src/layers/: agentic_retrieval.py  assembler.py  knowledge_base.py  l1_core.py  l2_behavior.py  l3_episodic.py  l4_working.py  step_a.py  subconscious.py
src/llm/: client.py
src/preprocess/: annotator.py  chunker.py  reduce_l1.py  reduce_l2.py  text_chunker.py
src/preprocess/prompts/: annotate_tags.md  reduce_core_modules.md  reduce_global_rules.md
tests/: conftest.py  test_assembler.py  test_chunker.py  test_l1.py  test_l2.py  test_l3.py  test_server.py  test_step_a.py
vectordb_backup/7b43a0c8-84ca-4cc4-83b7-48b8a5f0d8c5/: index_metadata.pickle
vectordb_old/6709e039-36fc-446a-8250-ad3d1a50698f/: index_metadata.pickle
(+5 files in other folders)
